--- a/main_net_config.conf
+++ b/main_net_config.conf
@@ -23,30 +23,30 @@ storage {
 
   # Attention: name is a required field that must be set !!!
   properties = [
-//    {
-//      name = "account",
-//      path = "storage_directory_test",
-//      createIfMissing = true,
-//      paranoidChecks = true,
-//      verifyChecksums = true,
-    //      compressionType = 1,        // compressed with snappy
-    //      blockSize = 4096,           // 4  KB =         4 * 1024 B
-    //      writeBufferSize = 10485760, // 10 MB = 10 * 1024 * 1024 B
-    //      cacheSize = 10485760,       // 10 MB = 10 * 1024 * 1024 B
-    //      maxOpenFiles = 100
-    //    },
-//    {
-//      name = "account-index",
-//      path = "storage_directory_test",
-//      createIfMissing = true,
-//      paranoidChecks = true,
-//      verifyChecksums = true,
-    //      compressionType = 1,        // compressed with snappy
-    //      blockSize = 4096,           // 4  KB =         4 * 1024 B
-    //      writeBufferSize = 10485760, // 10 MB = 10 * 1024 * 1024 B
-    //      cacheSize = 10485760,       // 10 MB = 10 * 1024 * 1024 B
-    //      maxOpenFiles = 100
-    //    },
+    # {
+    #   name = "account",
+    #   path = "storage_directory_test",
+    #   createIfMissing = true,
+    #   paranoidChecks = true,
+    #   verifyChecksums = true,
+    #       compressionType = 1,        // compressed with snappy
+    #       blockSize = 4096,           // 4  KB =         4 * 1024 B
+    #       writeBufferSize = 10485760, // 10 MB = 10 * 1024 * 1024 B
+    #       cacheSize = 10485760,       // 10 MB = 10 * 1024 * 1024 B
+    #       maxOpenFiles = 100
+    #     },
+    # {
+    #   name = "account-index",
+    #   path = "storage_directory_test",
+    #   createIfMissing = true,
+    #   paranoidChecks = true,
+    #   verifyChecksums = true,
+    #       compressionType = 1,        // compressed with snappy
+    #       blockSize = 4096,           // 4  KB =         4 * 1024 B
+    #       writeBufferSize = 10485760, // 10 MB = 10 * 1024 * 1024 B
+    #       cacheSize = 10485760,       // 10 MB = 10 * 1024 * 1024 B
+    #       maxOpenFiles = 100
+    #     },
   ]
 
   needToUpdateAsset = true
@@ -207,7 +207,8 @@ seed.node = {
   #   "ip:port"
   # ]
   ip.list = [
-    "54.193.109.248:18888"  
+    "54.193.109.248:18888",
+    "18.162.186.78:18888"
   ]
 }
 
@@ -243,7 +244,7 @@ genesis.block = {
 	{
       address: THXKRNE219BSE9R37mbyU1t1MPrTmwXSoa,
       url = "http://GR2.com",
-      voteCount = 100000026
+      voteCount = 100000025
     }
   ]
 
@@ -268,7 +269,7 @@ localwitness = [
 #]
 
 block = {
-  needSyncCheck = false 
+  needSyncCheck = true 
   maintenanceTimeInterval = 21600000
   proposalExpireTime = 259200000 // 3 day: 259200000(ms)
 }
